--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,6 @@
 .header{
     background-image: url(../images/bg-hero-desktop.svg);
+    padding-bottom: 5rem;
 
     &__logo{
         width: 15rem;
@@ -14,6 +15,15 @@
     &__primary{
         display: flex;
         flex-direction: column;
+
+        &--main{
+            font-size: 4rem;
+        }
+
+        &--sub{
+            font-size: 2rem;
+            font-weight: 300;
+        }
     }
 
     &__images{
