--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@ ul {
   margin-bottom: 4rem; }
 
 .header {
-  background-image: url(../images/bg-hero-desktop.svg); }
+  background-image: url(../images/bg-hero-desktop.svg);
+  padding-bottom: 5rem; }
   .header__logo {
     width: 15rem;
     margin: 3rem 7rem; }
@@ -47,6 +48,11 @@ ul {
   .header__primary {
     display: flex;
     flex-direction: column; }
+    .header__primary--main {
+      font-size: 4rem; }
+    .header__primary--sub {
+      font-size: 2rem;
+      font-weight: 300; }
   .header__images {
     justify-self: center; }
   .header__image {
@@ -58,6 +64,30 @@ ul {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
     grid-row-gap: 3rem; }
+
+.about {
+  padding-top: 10rem; }
+  .about__contents {
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+    margin: 8rem 11rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr)); }
+    .about__contents__text {
+      align-self: center;
+      margin-left: 3rem;
+      margin-right: 1.5rem; }
+      .about__contents__text--main {
+        font-size: 2.5rem;
+        font-weight: 600; }
+      .about__contents__text--sub {
+        font-size: 1.5rem;
+        line-height: 1.5;
+        font-weight: 200; }
+  .about__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block; }
 
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
